--- a/template.html
+++ b/template.html
@@ -14,7 +14,7 @@
     </a>
     
     <a href="" style="text-decoration:none">
-      <img style="border-style: none" width="80" height="23" src="images/w3c_css_button_image.png" alt="Validate HTML5" />
+      <img style="border-style: none" width="80" height="23" src="images/w3c_css_button_image.png" alt="Validate HTML" />
     </a>      
   </body>
 </html>
