--- a/contract.html
+++ b/contract.html
@@ -26,10 +26,10 @@
     </p>
 
     <a href="" style="text-decoration:none">
-      <img style="border-style: none" width="80" height="23" src="images/w3c_html_button_image.png" alt="Validate HTML5"/>
+      <img style="border-style: none" width="80" height="23" src="images/w3c_html_button_image.png" alt="Validate HTML5">
     </a>    
     <a href="" style="text-decoration:none">
-      <img style="border-style: none" width="80" height="23" src="images/w3c_css_button_image.png" alt="Validate HTML5" />
+      <img style="border-style: none" width="80" height="23" src="images/w3c_css_button_image.png" alt="Validate HTML5">
     </a>  
   </body>
 </html>
