--- a/contract.html
+++ b/contract.html
@@ -25,11 +25,11 @@
       Signed: Giancarlo Kite, 08/21/2024
     </p>
 
-    <a href="" style="text-decoration:none">
-      <img style="border-style: none" width="80" height="23" src="images/w3c_html_button_image.png" alt="Validate HTML5">
+    <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgiancarlo-k.github.io%2Fweb140%2Fcontract.html" style="text-decoration:none">
+      <img style="border-style: none" width="83" height="26" src="images/w3c_html_button_image.png" alt="Validate HTML5">
     </a>    
     <a href="" style="text-decoration:none">
-      <img style="border-style: none" width="80" height="23" src="images/w3c_css_button_image.png" alt="Validate HTML5">
+      <img style="border-style: none" width="83" height="26" src="images/w3c_css_button_image.png" alt="Validate HTML5">
     </a>  
   </body>
 </html>
