--- a/contract.html
+++ b/contract.html
@@ -28,7 +28,7 @@
     <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgiancarlo-k.github.io%2Fweb140%2Fcontract.html" style="text-decoration:none">
       <img style="border-style: none" width="83" height="26" src="images/w3c_html_button_image.png" alt="Validate HTML5">
     </a>    
-    <a href="" style="text-decoration:none">
+    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgiancarlo-k.github.io%2Fweb140%2Fcontract.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en" style="text-decoration:none">
       <img style="border-style: none" width="83" height="26" src="images/w3c_css_button_image.png" alt="Validate HTML5">
     </a>  
   </body>
