Updated Contract via workflow instructions

--- a/contract.html
+++ b/contract.html
@@ -11,25 +11,35 @@
   </head>
 
   <body>
-    <h1>Giancarlo Kite, WEB140-N801, Course Contract</h1>
-    <p>
-      I, Giancarlo kite agree to abide by the terms of the course contract in my Fall 2024 WEB140-N801 course, Web Development Tools with my instructor, Ella McManus.
-    </p>
-    <p>
-      I understand that all work that I do on my school and personal website will be publicly available to the world, and will not put information there that is inappropriate for schoolwork, or that I wish to keep private.
-    </p>
-    <p>
-      I also understand that it is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as absences.
-    </p>
-    <p>
-      Signed: Giancarlo Kite, 08/21/2024
-    </p>
+    <div class="mainContainer">
+      <h1>Giancarlo Kite, WEB140-N801, Course Contract</h1>
+      <p>
+        I, Giancarlo kite agree to abide by the terms of the course contract in my Fall 2024 WEB140-N801 course, Web Development Tools with my instructor, Ella McManus.
+      </p>
+      <p>
+        I understand that all work that I do on my school and personal website will be publicly available to the world, and will not put information there that is inappropriate for schoolwork, or that I wish to keep private.
+      </p>
+      <p>
+        I also understand that it is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as absences.
+      </p>
+      <p>
+        Signed: Giancarlo Kite, 08/21/2024
+      </p>
+  
+      <h2>Workspace Setup</h2>
+      <p>
+        Here is an embedded screenshot of my workspace setup. I've highlighted the important parts, and cropped and sized the image appropriately. Click the image for a link to the original. Both files are stored and named appropriately in my images folder inside this course's folder.
+      </p>
+      <a style="align-self: center;" href="images/workflow_annotated_image.png"><img style="width: 100vh; margin-top: 20px; box-shadow: rgba(0, 0, 0, 0.418) 0px 3px 8px;"  src="images/workflow_annotated_image.png" alt="Workflow annotated"></a>
+    </div>
 
-    <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgiancarlo-k.github.io%2Fweb140%2Fcontract.html" style="text-decoration:none">
-      <img style="border-style: none" width="84" height="27" src="images/w3c_html_button_image.png" alt="Validate HTML5">
-    </a>    
-    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgiancarlo-k.github.io%2Fweb140%2Fcontract.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en" style="text-decoration:none">
-      <img style="border-style: none" width="84" height="27" src="images/w3c_css_button_image.png" alt="Validate HTML5">
-    </a>  
+    <div class="validationContainer">
+      <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgiancarlo-k.github.io%2Fweb140%2Fcontract.html" style="text-decoration:none">
+        <img style="border-style: none" width="90" height="33" src="images/w3c_html_button_image.png" alt="Validate HTML5">
+      </a>    
+      <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgiancarlo-k.github.io%2Fweb140%2Fcontract.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en" style="text-decoration:none">
+        <img style="border-style: none" width="90" height="33" src="images/w3c_css_button_image.png" alt="Validate HTML5">
+      </a>  
+    </div>
   </body>
 </html>
