--- a/contract.html
+++ b/contract.html
@@ -30,7 +30,7 @@
       <p>
         Here is an embedded screenshot of my workspace setup. I've highlighted the important parts, and cropped and sized the image appropriately. Click the image for a link to the original. Both files are stored and named appropriately in my images folder inside this course's folder.
       </p>
-      <a style="align-self: center;" href="images/workflow_annotated_image.png"><img style="width: 100vh; margin-top: 20px; box-shadow: rgba(0, 0, 0, 0.418) 0px 3px 8px;"  src="images/workflow_annotated_image.png" alt="Workflow annotated"></a>
+      <a style="align-self: center;" href="images/workflow.jpg"><img style="width: 100vh; margin-top: 20px; box-shadow: rgba(0, 0, 0, 0.418) 0px 3px 8px;"  src="images/workflow_annotated_image.jpg" alt="Workflow annotated"></a>
     </div>
 
     <div class="validationContainer">
